--- a/ALGORITMOS PYTHON.ipynb
+++ b/ALGORITMOS PYTHON.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15a72183",
+   "id": "6d470e51",
    "metadata": {},
    "source": [
     "Consiste en el recorrido por la lista seleccionando en cada iteracion un valor como clave y compararlo con el resto insertandolo en el lugar correspondiente."
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df62d9d8",
+   "id": "fbeadf51",
    "metadata": {},
    "source": [
     "A = [1 2 3 ... n]\\\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a01a943d",
+   "id": "94d5608b",
    "metadata": {},
    "source": [
     "**2. SELECTION SORT**"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2396f018",
+   "id": "e3fbc67e",
    "metadata": {},
    "source": [
     "El orden de seleccion es similar al orden de insercion con una ligera diferencia. Este algoritmo tambien divide la matriz en subpartes ordenadas y no ordenadas. Y luego, en cada iteracion, tomaremos el elemento minimos de la subparte sin clasificar y coloquelo en la ultima posicion del subparte ordenada.\n"
@@ -131,11 +131,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b131295c",
+   "id": "7bc0f7fb",
    "metadata": {},
    "source": [
     "Algoritmo\n",
-    "**Step 1:** Set Min to location 0.\n",
+    "\n",
+    "**Step 1:** Set Min to location 0.\\\n",
     "**Step 2:** Search the minimum element in the list.\n",
     "**Step 3:** Swap with the value at location MIN.\n",
     "**Step 4:** Increment MIN to point to next element\n",
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba3a9acf",
+   "id": "55a0fca3",
    "metadata": {},
    "source": [
     "for j in range(1,length):\n",
@@ -166,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "23121045",
+   "id": "23df0c7c",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53eeafb2",
+   "id": "a69eacd3",
    "metadata": {},
    "source": [
     "ALGORITMO"
@@ -210,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d89fb713",
+   "id": "2edd64e2",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5689f88",
+   "id": "83339930",
    "metadata": {},
    "source": [
     "## 3. MERGE SORTE ##"
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54030a65",
+   "id": "5a320a4d",
    "metadata": {},
    "source": [
     "El algoritmo de ordenamiento por mezcla es un algoritmo de ordenamiento externo estable basado enla tecnica divide y venceras.\n",
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3cab74f",
+   "id": "9f30e7fd",
    "metadata": {},
    "source": [
     "**funcion mergesort(m)**\n",
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fb0fff7",
+   "id": "8f63db02",
    "metadata": {},
    "source": [
     "**function merge(left,right)**\n",
@@ -296,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef41757",
+   "id": "0c4b0db3",
    "metadata": {},
    "outputs": [],
    "source": []
