--- a/ALGORITMOS PYTHON.ipynb
+++ b/ALGORITMOS PYTHON.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d470e51",
+   "id": "2eea2d7d",
    "metadata": {},
    "source": [
     "Consiste en el recorrido por la lista seleccionando en cada iteracion un valor como clave y compararlo con el resto insertandolo en el lugar correspondiente."
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbeadf51",
+   "id": "49f70c32",
    "metadata": {},
    "source": [
     "A = [1 2 3 ... n]\\\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94d5608b",
+   "id": "1eb5c649",
    "metadata": {},
    "source": [
     "**2. SELECTION SORT**"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3fbc67e",
+   "id": "f5004dfc",
    "metadata": {},
    "source": [
     "El orden de seleccion es similar al orden de insercion con una ligera diferencia. Este algoritmo tambien divide la matriz en subpartes ordenadas y no ordenadas. Y luego, en cada iteracion, tomaremos el elemento minimos de la subparte sin clasificar y coloquelo en la ultima posicion del subparte ordenada.\n"
@@ -131,16 +131,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bc0f7fb",
+   "id": "69d421f9",
    "metadata": {},
    "source": [
     "Algoritmo\n",
     "\n",
     "**Step 1:** Set Min to location 0.\\\n",
-    "**Step 2:** Search the minimum element in the list.\n",
-    "**Step 3:** Swap with the value at location MIN.\n",
-    "**Step 4:** Increment MIN to point to next element\n",
-    "**Step 5:** Repeat ulti list is sorted"
+    "**Step 2:** Search the minimum element in the list.\\\n",
+    "**Step 3:** Swap with the value at location MIN.\\\n",
+    "**Step 4:** Increment MIN to point to next element.\\\n",
+    "**Step 5:** Repeat ulti list is sorted."
    ]
   },
   {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a0fca3",
+   "id": "a0063bfb",
    "metadata": {},
    "source": [
     "for j in range(1,length):\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "23df0c7c",
+   "id": "bb431758",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a69eacd3",
+   "id": "e926e1e5",
    "metadata": {},
    "source": [
     "ALGORITMO"
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2edd64e2",
+   "id": "db5c0392",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83339930",
+   "id": "8a4f04a8",
    "metadata": {},
    "source": [
     "## 3. MERGE SORTE ##"
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a320a4d",
+   "id": "44d43505",
    "metadata": {},
    "source": [
     "El algoritmo de ordenamiento por mezcla es un algoritmo de ordenamiento externo estable basado enla tecnica divide y venceras.\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f30e7fd",
+   "id": "89044f26",
    "metadata": {},
    "source": [
     "**funcion mergesort(m)**\n",
@@ -268,13 +268,13 @@
     "         if last(left)<= first(right)\n",
     "             append right to left\n",
     "             return left\n",
-    "          result= merge(left),right\n",
+    "          result= merge(left,right)\n",
     "          return result"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8f63db02",
+   "id": "57019279-eb4b-4c6e-a4e1-d00ea15534d6",
    "metadata": {},
    "source": [
     "**function merge(left,right)**\n",
@@ -296,8 +296,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "b8e1a495",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = [9,8,4,6,10,11,20,19,18,17]\n",
+    "\n",
+    "def mergesort(A):\n",
+    "    #print(A)\n",
+    "    if len(A)<=1:\n",
+    "        return A\n",
+    "    else:\n",
+    "        middle =int(len(A)/2)\n",
+    "        left   = mergesort(A[:middle])\n",
+    "        right  = mergesort(A[middle:])\n",
+    "        return merge(left,right)\n",
+    "def merge(list1,list2):\n",
+    "    i,j    = 0,0 #variables de incremento\n",
+    "    result = []\n",
+    "    #intercalar ordenadamente\n",
+    "    while(i<len(list1) and j<len(list2)):\n",
+    "        if(list1[i]<list2[j]):\n",
+    "            result.append(list1[i])\n",
+    "            i+=1\n",
+    "        else:\n",
+    "            result.append(list2[j])\n",
+    "            j+=1\n",
+    "    while(i<len(list1)):\n",
+    "        result.append(list1[i])\n",
+    "        i=i+1\n",
+    "    while(j<len(list2)):\n",
+    "        result.append(list2[j])\n",
+    "        j=j+1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d140d1f5-c642-46ab-8555-58b3678d3dfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 4, 6, 10, 11, 20, 19, 18, 17]\n",
+      "[9, 8, 4, 6, 10]\n",
+      "[9, 8]\n",
+      "[9]\n",
+      "[8]\n",
+      "[4, 6, 10]\n",
+      "[4]\n",
+      "[6, 10]\n",
+      "[6]\n",
+      "[10]\n",
+      "[11, 20, 19, 18, 17]\n",
+      "[11, 20]\n",
+      "[11]\n",
+      "[20]\n",
+      "[19, 18, 17]\n",
+      "[19]\n",
+      "[18, 17]\n",
+      "[18]\n",
+      "[17]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 8, 9, 10, 11, 17, 18, 19, 20]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mergesort(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0c4b0db3",
+   "id": "567e1bb5-3842-4180-bb80-b5f5549eb9fd",
    "metadata": {},
    "outputs": [],
    "source": []
