count sort algorithm

--- a/ALGORITMOS PYTHON.ipynb
+++ b/ALGORITMOS PYTHON.ipynb
@@ -379,9 +379,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6ee0de4-a85b-421b-9a1e-24af6341af32",
+   "metadata": {},
+   "source": [
+    "**4. Ordenamiento Counting Sort**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7b13be7",
+   "metadata": {},
+   "source": [
+    "La ide es iterar sobre la coleccion y construir un mapa, almacenar informacion sobre el numero total de veces que ocurre cada clave dentro de la coleccion de entrada. Luego recorrer la coleccion nuevamente y luego usar esos conteos para determinar las posiciones finales de cada valor clave en la coleccion. Esto aprovecha el hecho de que un mapa se ordena segun el orden natural de las claves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1085998e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# la funcion setdefault me permite obtener o recuperar los valores del diccionario\n",
+    "# SI NO ESTA DECLARADO LE PUEDO ASIGNAR UN VALOR\n",
+    "\n",
+    "def countSort(lista):\n",
+    "    freq ={}\n",
+    "    for i in nums:\n",
+    "        freq[i]=freq.setdefault(i,0)+1\n",
+    "    i=0\n",
+    "    for key,value in sorted(freq.items()):\n",
+    "        print(key,value)\n",
+    "        while value>0:\n",
+    "            nums[i]=key\n",
+    "            value=value-1\n",
+    "            i=i+1\n",
+    "    return nums\n",
+    "# LA VENTAJA DE ESTE CODIGO ES QUE EL DICTIONARIO Y EL METODO FOR TE\n",
+    "# PERMITEN ALMACENAR EL DICTIONARIO Y HACER USOD DE LA FUNCTION SORTED"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7cd65dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3\n",
+      "2 2\n",
+      "4 3\n",
+      "10 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [4, 2, 1, 4, 1, 4, 2, 1, 10]\n",
+    "sort_= countSort(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "58663717",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 2, 2, 4, 4, 4, 10]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "567e1bb5-3842-4180-bb80-b5f5549eb9fd",
+   "id": "2bf26d2e",
    "metadata": {},
    "outputs": [],
    "source": []
