se crean 2 listas count y output

--- a/ALGORITMOS PYTHON.ipynb
+++ b/ALGORITMOS PYTHON.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7b13be7",
+   "id": "6d88216c",
    "metadata": {},
    "source": [
     "La ide es iterar sobre la coleccion y construir un mapa, almacenar informacion sobre el numero total de veces que ocurre cada clave dentro de la coleccion de entrada. Luego recorrer la coleccion nuevamente y luego usar esos conteos para determinar las posiciones finales de cada valor clave en la coleccion. Esto aprovecha el hecho de que un mapa se ordena segun el orden natural de las claves"
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1085998e",
+   "id": "8803296b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7cd65dcc",
+   "id": "77be8596",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "58663717",
+   "id": "3b3c62d7",
    "metadata": {},
    "outputs": [
     {
@@ -465,11 +465,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "b1797335",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28mprint\u001b[39m(count)\n\u001b[0;32m     16\u001b[0m array\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m---> 17\u001b[0m countSort_OS(array)\n",
+      "Cell \u001b[1;32mIn[31], line 11\u001b[0m, in \u001b[0;36mcountSort_OS\u001b[1;34m(array)\u001b[0m\n\u001b[0;32m      9\u001b[0m     count[i]\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m count[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m i\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 11\u001b[0m     output[count[array[i]]\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m=\u001b[39marray[i]\n\u001b[0;32m     12\u001b[0m     count[array[i]]\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     13\u001b[0m     i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "# SIN LA AYUDA DE DICCIONARIO Y UTILIZANDO 2 LISTAS\n",
+    "def countSort_OS(array):\n",
+    "    size   = len(array)\n",
+    "    output = [0]*size\n",
+    "    count  = [0]*10\n",
+    "    for i in range(0,size):\n",
+    "        count[array[i]]+=1\n",
+    "    for i in range(1,10):\n",
+    "        count[i]+= count[i-1]\n",
+    "    while i>=0:\n",
+    "        output[count[array[i]]-1]=array[i]\n",
+    "        count[array[i]]-=1\n",
+    "        i-=1\n",
+    "    return output\n",
+    "    print(count)\n",
+    "array=[4,2,2,8,3,3,1]\n",
+    "countSort_OS(array)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2bf26d2e",
+   "id": "358e6823",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "i=Size-1\n",
+    "while i>=0\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
