--- a/ALGORITMOS PYTHON.ipynb
+++ b/ALGORITMOS PYTHON.ipynb
@@ -23,6 +23,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3f8927d0",
+   "metadata": {},
+   "source": [
+    "## OBSERVACION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fe0a47a",
+   "metadata": {},
+   "source": [
+    "Casos en los que vale la pena hacer un analisis mas produndo de la eficiencia de nuestro algoritmo para hacer lo mas eficiente posible:\n",
+    "* Cuanto tenemos cantidades muy grandes de informacion y esto es especialmente importante cuando hay bucles ya que una pequeña difrencia de 5milisegundos en una sola operacion no significa gran cosa, pero iterar eso a 1 millo de registros, supondria mas  de 1 hora con 23 minutos adicionales\n",
+    "* Cuando trabajamos con sistemas de tiempo real.\n",
+    "* Por las entrevistas técnicas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1672215f",
+   "metadata": {},
+   "source": [
+    "## TIME COMPLEXITY- complejidad de tiempo\n",
+    "Cantidad de tiempo que dura la ejecucion de un algortimo y esta estimada en terminos de la cantidad de operaciones elementales que se ejecutaron en total."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62ce7da1",
+   "metadata": {},
+   "source": [
+    "## SPACE COMPLEXITY\n",
+    "Podemos utilizar Big O para analizar el space complexity que representa la cantidad de memoria adicional que necesitamos asiganar para poder ejecutar el codigo de nuestro algoritmo.\n",
+    "En algunas ocasiones puedes haber esuchado acerca de auxiliar space complexitt que se refiere al espacio requerido por el algoritmo, sin incluir el espacio requerido por los inputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20debc1c",
+   "metadata": {},
+   "source": [
+    "[Link reference](https://www.freecodecamp.org/news/big-o-cheat-sheet-time-complexity-chart/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b765bff7",
    "metadata": {},
    "source": [
@@ -502,9 +548,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "036e1125",
+   "metadata": {},
+   "source": [
+    "# HEAP SORT - ORDENAMIENTO MONTICULO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9db4fe2",
+   "metadata": {},
+   "source": [
+    "A heap in Python is a data structure based on a unique binary tree designed to efficiently access the smallest or largest element in a collection of items. It follows a complete binary tree's property and satisfies the heap property. Therefore, it is also known as a binary heap."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb0807c0",
+   "metadata": {},
+   "source": [
+    "As we all know, the complete binary tree is a tree with every level filled and all the nodes are as far left as possible. In the binary tree, it is possible that the last level is empty and not filled. Now, you must be wondering what is the heap property."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5199e21a",
+   "metadata": {},
+   "source": [
+    "In the heap data structure, we assign key-value or weight to every node of the tree. Now, the root node key value is compared with the children’s nodes and then the tree is arranged accordingly into two categories i.e., max-heap and min-heap."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6620f2ca",
+   "metadata": {},
+   "source": [
+    "The heap data structure is basically used as a heapsort algorithm to sort the elements in an array or a list. These algorithms can be used in priority queues, order statistics, Prim's algorithm or Dijkstra's algorithm, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abd01a9e",
+   "metadata": {},
+   "source": [
+    "¿Cuál es el uso de un montón?\n",
+    "Python usa la estructura de datos del montón, ya que es un método altamente eficiente para almacenar una colección de elementos ordenados. Es útil para realizar un seguimiento de los elementos más grandes y más pequeños de una colección, que es una tarea común en muchos algoritmos y estructuras de datos. Las colas de prioridad, que se usan comúnmente en la programación de tareas y el enrutamiento de red, también se implementan mediante el almacenamiento dinámico."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "833647e2",
+   "metadata": {},
+   "source": [
+    "What is Heapify?\n",
+    "The process of creating a heap data structure using the binary tree is called Heapify. The heapify process is used to create the Max-Heap or the Min-Heap. Let us study the Heapify using an example below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "317e81ae",
+   "metadata": {},
+   "source": [
+    "**Now we will set the current element “k” as “largest” and as we know the index of a left child is given by “2k + 1” and the right child is given by “2k + 2”.**\n",
+    "\n",
+    "Therefore, if the left child is larger than the current element i.e. kth index we will set the “largest” with the left child’s index, and if the right child is larger than the current element i.e., kth index then we will set the “largest” with right child’s index.\n",
+    "\n",
+    "**Lastly, we will swap the “largest” element with the current element(kth element).**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "90471178",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_heapify(A,N,k):\n",
+    "    l=2*k+1\n",
+    "    r=2*k+2\n",
+    "    largest=k\n",
+    "    if l<N and A[l]>A[largest]:\n",
+    "        largest=l\n",
+    "    if r<N and A[r]>A[largest]:\n",
+    "        largest=r\n",
+    "    if largest !=k:\n",
+    "        arr[k],arr[largest]=arr[largest],arr[k]#\n",
+    "        max_heapify(A,N,largest)            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "c6a1f3b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def heapSort(arr):\n",
+    "    N=len(arr)\n",
+    "    for i in range(N//2-1 ,-1,-1):\n",
+    "        max_heapify(arr,N,i)\n",
+    "    for i in range(N-1,0,-1):\n",
+    "        arr[i],arr[0]= arr[0],arr[i]#swap saco siempre el mayor y disminuyo el array\n",
+    "        max_heapify(arr,i,0)\n",
+    "    print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "a34e366c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [12, 11, 13, 5, 6, 7]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "18d4b9ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 7, 11, 12, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "heapSort(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51962e95",
+   "metadata": {},
+   "source": [
+    "# QUICK SORT-  ORDENAMIENTO RAPIDO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb572e11",
+   "id": "f33eb705",
    "metadata": {},
    "outputs": [],
    "source": []
