add quick sort and bubble sort

--- a/ALGORITMOS PYTHON.ipynb
+++ b/ALGORITMOS PYTHON.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f8927d0",
+   "id": "4ad29d45",
    "metadata": {},
    "source": [
     "## OBSERVACION"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fe0a47a",
+   "id": "5d6e26b6",
    "metadata": {},
    "source": [
     "Casos en los que vale la pena hacer un analisis mas produndo de la eficiencia de nuestro algoritmo para hacer lo mas eficiente posible:\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1672215f",
+   "id": "cac7a877",
    "metadata": {},
    "source": [
     "## TIME COMPLEXITY- complejidad de tiempo\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62ce7da1",
+   "id": "fe697310",
    "metadata": {},
    "source": [
     "## SPACE COMPLEXITY\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20debc1c",
+   "id": "663890a9",
    "metadata": {},
    "source": [
     "[Link reference](https://www.freecodecamp.org/news/big-o-cheat-sheet-time-complexity-chart/)"
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036e1125",
+   "id": "b37f1a93",
    "metadata": {},
    "source": [
     "# HEAP SORT - ORDENAMIENTO MONTICULO"
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9db4fe2",
+   "id": "7dc13fc6",
    "metadata": {},
    "source": [
     "A heap in Python is a data structure based on a unique binary tree designed to efficiently access the smallest or largest element in a collection of items. It follows a complete binary tree's property and satisfies the heap property. Therefore, it is also known as a binary heap."
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb0807c0",
+   "id": "44a671a4",
    "metadata": {},
    "source": [
     "As we all know, the complete binary tree is a tree with every level filled and all the nodes are as far left as possible. In the binary tree, it is possible that the last level is empty and not filled. Now, you must be wondering what is the heap property."
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5199e21a",
+   "id": "44b1fe9c",
    "metadata": {},
    "source": [
     "In the heap data structure, we assign key-value or weight to every node of the tree. Now, the root node key value is compared with the children’s nodes and then the tree is arranged accordingly into two categories i.e., max-heap and min-heap."
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6620f2ca",
+   "id": "e7547058",
    "metadata": {},
    "source": [
     "The heap data structure is basically used as a heapsort algorithm to sort the elements in an array or a list. These algorithms can be used in priority queues, order statistics, Prim's algorithm or Dijkstra's algorithm, etc."
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abd01a9e",
+   "id": "04046810",
    "metadata": {},
    "source": [
     "¿Cuál es el uso de un montón?\n",
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "833647e2",
+   "id": "176668a5",
    "metadata": {},
    "source": [
     "What is Heapify?\n",
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "317e81ae",
+   "id": "d8087ec9",
    "metadata": {},
    "source": [
     "**Now we will set the current element “k” as “largest” and as we know the index of a left child is given by “2k + 1” and the right child is given by “2k + 2”.**\n",
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "90471178",
+   "id": "b78deb1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "c6a1f3b7",
+   "id": "05545fec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "a34e366c",
+   "id": "cae1f33a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "18d4b9ea",
+   "id": "731d28e1",
    "metadata": {},
    "outputs": [
     {
@@ -684,16 +684,164 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51962e95",
+   "id": "ba80ba1b",
    "metadata": {},
    "source": [
     "# QUICK SORT-  ORDENAMIENTO RAPIDO"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a23dc24",
+   "metadata": {},
+   "source": [
+    "Es una algoritmo de clasificacion popular que clasifica un arreglo utilizando una estrategia de divide y venceras, lo que implica que clasifica el arreglo diviendola repetidamente en subarreglo mas pequeños y luego ordenando los subarreglos de forma recursiva.\n",
+    "Es uno de los algoritmos de clasificacion de datos mas efectivos disponibel por lo general es mas rapido que otros algoritmos de clasificacion, como la clasificacion por fusion de para matrices grandes. En aplicaciones practicas supera a otros algoritmos de clasificacion como Bubble sort y insertion sort a pesarde tener una complejidad en el peor de los casos de O(n^2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49317804",
+   "metadata": {},
+   "source": [
+    "La idea basica detras del algortimo Quick sort es divir una matriz en dos subarreglos, uno que contien todos los elementos mas pequeños que el elemento pivote y el otro que contiene todos los elementos mas grandes que el elemento pivote.\n",
+    "Con frecuencia la mediana de la matriz sirve como pivote . Una vez se ha particionado el arreglo, el algoritmo QuickSorte orden los dos subarreglos recursivamente. Todos los subarrelos se vacian secuencialmente hasta que se orden todo el arreglo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9f97f3d",
+   "metadata": {},
+   "source": [
+    "PSEUDOCODIGO:\n",
+    "\n",
+    "* pivot element is used to divide a larger array into subarrays\n",
+    "* When dividing the array in half, the pivot should be positioned such tha elements smaller than the pivot are maintained on the left and elements larger than the pivot ara maintained on the right.\n",
+    "* The same technigque is used to separate the left and right subarrays.\n",
+    "* This procedure is repeated until every subarray contains a single value.\n",
+    "* Currently the components have been sorted. The items are finally combined into a single sorted array.\n",
+    "\n",
+    "quicksort(arr)\\\n",
+    "\n",
+    "    if length(arr)<=1\n",
+    "    return arr\n",
+    "    else\n",
+    "    pivot= arr[0]\n",
+    "    left  = empty array\n",
+    "    right = empty array\n",
+    "    for each element x in arr[1:]\n",
+    "    if x<pivot\n",
+    "    append x to left\n",
+    "    else:\n",
+    "    append x to right\n",
+    "    sorted_left = quicksort(left)\n",
+    "    sorted_right= quicksort(right)\n",
+    "    return sorted_left+[pivot]+sorted_right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "9861881d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quickSort(arr):\n",
+    "    if len(arr)<=1:\n",
+    "        return arr\n",
+    "    else:\n",
+    "        pivot= [arr[0]]\n",
+    "        left = [x for x in arr[1:] if x<arr[0]]\n",
+    "        right= [x for x in arr[1:] if x>arr[0]]\n",
+    "        return quickSort(left)+pivot+quickSort(right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "5f0156a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 8]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=[5,1,8,3,2]\n",
+    "quickSort(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4610e92",
+   "metadata": {},
+   "source": [
+    "# BUBBLE SORT(SINKING SORT)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd1044ad",
+   "metadata": {},
+   "source": [
+    "Bubble sort tambien llamado sinking sort, es un algoritmo de clasificación que compara cada para de elementos adyacentes. La técnica básica del ordenamiento de burbujas es que el primer elemento de la lista se comparar con el segundo,el segundo con el tercero y asi sucesivamente. Cada iteracion mueve cada elemento de la matriz mas cerca del final, de forma similar a como las burbujas de aire suben a la superficie del agua.Como resultado, el elemento mas grande se coloca en el lugar que le corresponde en la lista al final de cada iteación."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "40cb5202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bubbleSort(arr):\n",
+    "    n=len(arr)\n",
+    "    swapped=False\n",
+    "    for i in range(n-1):\n",
+    "        for j in range(n-i-1):\n",
+    "            if arr[j]>arr[j+1]:\n",
+    "                swapped=True\n",
+    "                arr[j],arr[j+1]=arr[j+1],arr[j]\n",
+    "        if not swapped:\n",
+    "            return\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9100e08d",
+   "metadata": {},
+   "source": [
+    "arr = [64, 34, 25, 12, 22, 11, 90]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "85ac9d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bubbleSort(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6453e8e1",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f33eb705",
+   "id": "13c50ad9",
    "metadata": {},
    "outputs": [],
    "source": []
