busqueda lineal y binaria

--- a/ALGORITMOS PYTHON.ipynb
+++ b/ALGORITMOS PYTHON.ipynb
@@ -846,17 +846,265 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bfc3c5b6",
+   "metadata": {},
+   "source": [
+    "# LINEAR SEARCH\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cfe84aa",
+   "metadata": {},
+   "source": [
+    "## Metodo Iterativo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dda284cc",
+   "execution_count": 140,
+   "id": "ebd7612b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def search(arr, x):\n",
+    "    for i in range(len(arr)):\n",
+    "        if arr[i]==x:\n",
+    "            return i\n",
+    "    return -1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "5a2d044c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr= [10,20,80,30,60,50,110,100,130,170]\n",
+    "search(arr, 110)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "595466dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr= [10,20,80,30,60,50,110,100,130,170]\n",
+    "search(arr, 175)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cfa8b17",
+   "metadata": {},
+   "source": [
+    "## Metodo recursivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "6187432a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_r(arr, curr_index,key):\n",
+    "    if curr_index ==-1:\n",
+    "        return -1\n",
+    "    if arr[curr_index]==key:\n",
+    "        return curr_index\n",
+    "    return search_r(arr,curr_index-1,key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "c57d87d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr= [10,20,80,30,60,50,110,100,130,170]\n",
+    "search_r(arr,9 ,110)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89b7b227",
+   "metadata": {},
+   "source": [
+    "# BINARY SEARCH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8046e53c",
+   "metadata": {},
+   "source": [
+    "Binary search is an efficiente algorithm for finding an item from a sorted list of items. It works repeatedly dividing in half the portion of the list that could contain the item, until you've narrowed down the possible location to just one. One of the most common ways to use binary search is to fin an item in an array.\n",
+    "For example, the Tycho-2 star catalog contains information about the brightest 2,539,913 star in our galaxy.Suppose that you want to search the catalog for a particular star, based on star's name. If the program examined every star, based on the star's name. If the program examined every start in the star catalog in orden starting with the first, an alogrithm called linear search, the computesr might have to examine all 2,539,913 starts to find the star you were looking for, in the wors case. IF The catalog were sorted alphabetically by start names, binary search would not have to examine more than 22 stars even in the worst case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c72c4a0",
+   "metadata": {},
+   "source": [
+    "1. Let min=1 and max =n\n",
+    "2. Guess the average of max and min, rounded down so that it is an integer.\n",
+    "3. if you guessed the number, stop, you found it!\n",
+    "4. if the guess was too low, set min to be one larger than the guess.\n",
+    "5. if the guess was too high, set max to be one smaller than the guess.\n",
+    "6. Go back to step two"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2b1c030c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BUSQUEDA RECURSIVA \n",
+    "def binary_search(arr,low,high,x):\n",
+    "    if high>=low:\n",
+    "        mid= (high+low)//2\n",
+    "        if arr[mid]==x:\n",
+    "            return mid\n",
+    "        elif arr[mid]>x:\n",
+    "            return binary_search(arr,low,mid-1,x)\n",
+    "        else:\n",
+    "            return binary_search(arr,mid+1,high,x)\n",
+    "    else:\n",
+    "        return -1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a93fae2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr= [2,3,4,10,25,29,40]\n",
+    "x=10\n",
+    "result = binary_search(arr,0,len(arr)-1,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b9045655",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ELEMENT IS PRESENT AT INDEX 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"ELEMENT IS PRESENT AT INDEX\",result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0ec4bd91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#BUSQUEDA ITERATIVA\n",
+    "def binary_searchi(arr,x):\n",
+    "    low=0\n",
+    "    high=len(arr)-1\n",
+    "    mid=0\n",
+    "    while low<=high:\n",
+    "        mid = (high+ low)//2\n",
+    "        if arr[mid]<x:\n",
+    "            low=mid+1\n",
+    "        elif arr[mid]>x:\n",
+    "            high=mid-1\n",
+    "        else:\n",
+    "            return mid\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "661950b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr= [2,3,4,10,25,29,40]\n",
+    "x=10\n",
+    "result = binary_searchi(arr,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d0ebd902",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebd7612b",
+   "id": "2a4739c8",
    "metadata": {},
    "outputs": [],
    "source": []
